# SDC-Multithrearing-tasks

C# patterns PRAKTOS 2/: Book.cs  C# patterns PRAKTOS 2.csproj  C# patterns PRAKTOS 2.sln  Program.cs
CarsExample/: Car.cs  CarsExample.sln  Person.cs  Program.cs
ClassLib(Task2)/: Bike.cs  Manufacturer.cs
EntityFramework/: EntityFramework.sln
Func vs Method/: Func vs Method.csproj  Func vs Method.sln  Program.cs
Lab 3 (Multithreading)/: Lab 3 (Multithreading).csproj  Lab 3 (Multithreading).sln  Program.cs  ThreadHandler.cs
Lab 4 (TPL)/: Lab 4 (TPL).sln
Lab 5 (Concurrency)/: Lab 5 (Concurrency).sln
Modern Cryptography Task 1/: Modern Cryptography Task 1.csproj  Modern Cryptography Task 1.sln  Program.cs
Multithreading Tasks C# (Reflection)/: Multithreading C# (Reflection).sln  Program.cs  Table.cs
Multithreading Tasks C# 1/: Multithreading Tasks C# 1.csproj  Multithreading Tasks C# 1.sln
OpenGL (CMake)/: CMakeLists.txt
OpenGL (CMake)/include/: main.hpp
OpenGL (CMake)/source/: glad.c  main.cpp
Patterns Lab 3 Task3/: Patterns Lab 3 Task3.csproj  Program.cs
Patterns Lab1/: Patterns Lab1.sln
Patterns Lab1 (second take)/: Patterns Lab1 (second take).sln
Patterns Lab3/: Cube.cs  Parallelepiped.cs  Patterns Lab3.csproj  Patterns Lab3.sln  Program.cs  Sphere.cs  Torus.cs  VolumeVisitor.cs
Patterns Lab3 Part2/: Context.cs  Patterns Lab3 Part2.csproj  Program.cs
Patterns Lab3 Part3/: Patterns Lab3 Part3.csproj
Patterns Laba1/: Patterns Laba1.csproj  Patterns Laba1.sln  Program.cs
Task 2/: Program.cs
Task 2/Cars/: Car.cs  (+3 more)
Task2/: Program.cs
(+121 files in other folders)
